2010-06-22 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.m: Use NSAllocateObject() instead of 
	  duplicating code in this function.

2010-03-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.m: Fixed typo in CFShowStr() and return for 
	CFStringGet*Ptr().

2010-03-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFBase.h:
	* Source/CFString.m: Fixed a few bugs and implemented CFShowStr().

2010-03-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFStream.m:
	* Source/CFArray.m:
	* Source/CFURL.m:
	* Source/CFDictionary.m:
	* Source/CFString.m:
	* Source/CFNumber.m:
	* Source/CFData.m:
	* Source/CFError.m: Added -_cfTypeID to bridged ObjC classes.

2010-03-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.m: Correct output of CFCopyDescription(), 
	fixed CFCopyTypeIDDescription() and added copyright notice.
	* Headers/CoreFoundation/CFRuntime.h: Added copyright notice.
	* Source/CFString.m: Fixed typo.

2010-03-22 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.m: Fixed output of -description.
	* Source/CFString.m:
	* Headers/CoreFoundation/CFString.h: Added CFShow().

2010-03-21 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GNUmakefile:
	* Source/CFRuntime:
	* Headers/CoreFoundation/CFRuntime.h: Added CFRuntime implementation.
	* Source/CFBase.m:
	* Headers/CoreFoundation/CFBase.h: Moved CFType function to 
	Source/CFRuntime.m.
	* Source/CFString.m: Fixed encoding conversion.

2010-03-21 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFBase.m: Cleaned up CFAllocator and removed things 
	that should not have been there in the first place.
	* Source/CFString.m:
	* Source/CFDate.m:
	* Source/CFArray.m:
	* Source/CFPropertyList.m:
	* Source/CFString.m:
	* Source/CFNumber.m: Cleaned up
	* Headers/CoreFoundation/CFBase.h: Added and fixed defines and types.

2010-02-28 08:43-EST Gregory John Casamento <greg.casamento@gmail.com>
